# QToDo

./: CMakeLists.txt
android/src/org/qtproject/example/QGuiApp/: Display.java
content/: CMakeLists.txt
include/: aitemtimer.h  display.h
interfaces/: ProfileImagePage.qml  Screen01.qml  main.qml
interfaces/components/: MyDoItem.qml
src/: aitemtimer.cpp  display.cpp  main.cpp
